--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -7,8 +7,8 @@
   <!ENTITY % English "INCLUDE"><!-- change language only here -->
 ]>
 
-<book lang="&language;">
-<bookinfo>
+<book id="kmouth" lang="&language;">
+<book id="kmouth"info>
   <title>The &kmouth; Handbook</title>
 
   <authorgroup>
