docs: restore <bookinfo>

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -8,7 +8,7 @@
 ]>
 
 <book id="kmouth" lang="&language;">
-<book id="kmouth"info>
+<bookinfo>
   <title>The &kmouth; Handbook</title>
 
   <authorgroup>
